force-app/main/default/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Host Lead Process</fullName>
        <description>Lifecycle for Host Leads from New to Qualified</description>
        <isActive>true</isActive>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Process To distribute leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aktiver_i_form_af_v_rdipapirer_el_andet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aktiver i form af værdipapirer el. andet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All__c</fullName>
        <label>Contact Info History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Being_Created__c</fullName>
        <label>Appointment Being Created</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Being created</fullName>
                </value>
                <value>
                    <fullName>Has been created</fullName>
                </value>
                <value>
                    <fullName>Awaiting reminder time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Appointment_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arbejdssituation__c</fullName>
        <label>Arbejdssituation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fuldtid på arbejdsmarkedet</fullName>
                </value>
                <value>
                    <fullName>Selvstændig</fullName>
                </value>
                <value>
                    <fullName>Pensioneret</fullName>
                </value>
                <value>
                    <fullName>Ledig</fullName>
                </value>
                <value>
                    <fullName>Sygemeldt</fullName>
                </value>
                <value>
                    <fullName>Andet</fullName>
                </value>
                <value>
                    <fullName>På barsel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Income__c</fullName>
        <label>Area Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Suggestion_Booking_Percentage__c</fullName>
        <formula>Area_Suggestion__r.Booking_Percentage__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Suggestion Booking Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Area_Suggestion_Booking_URL__c</fullName>
        <formula>Area_Suggestion__r.Event_URL_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Suggestion Booking URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Suggestion_Date__c</fullName>
        <formula>Area_Suggestion__r.Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Suggestion (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Suggestion_Status__c</fullName>
        <formula>TEXT( Area_Suggestion__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Suggestion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Suggestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Automatically generated suggestion for a lecture in the same area (based on Zip Code), as where the Lead originally booked.</inlineHelpText>
        <label>Area Suggestion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Area Suggestion)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aros_Api_Response__c</fullName>
        <label>Aros Api Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aros_Lead_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aros Lead Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aros_Lead_Generation_Time__c</fullName>
        <label>Aros Lead Generation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Aros_Lead_Generation_Type__c</fullName>
        <label>Aros Lead Generation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Besked_til_r_dgiver__c</fullName>
        <label>Besked til rådgiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beslutninger_ved_sygdom_Calendly__c</fullName>
        <label>Beslutninger ved sygdom? (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Fødselsdag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthday_txt__c</fullName>
        <label>Fødselsdag_txt</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolig_type__c</fullName>
        <description>Hvilken type bolig har klienten</description>
        <label>Boligtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flerfamiljshus</fullName>
                </value>
                <value>
                    <fullName>Friliggande</fullName>
                </value>
                <value>
                    <fullName>Kedjehus</fullName>
                </value>
                <value>
                    <fullName>Radhus</fullName>
                </value>
                <value>
                    <fullName>Övriga</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booked_Meeting_via_Hubhus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked Meeting via Hubhus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booker_navn__c</fullName>
        <label>Booker navn</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booker_navn_alias__c</fullName>
        <label>Booker navn alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_Action__c</fullName>
        <label>Booking Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Status_Formula__c</fullName>
        <formula>IF(
    ISPICKVAL(UTM_Term__c, &quot;Pre-booking&quot;), 
    &quot;Opt-in&quot;,
    IF(
        OR(Tickets_in_order__c = 0, ISBLANK(Tickets_in_order__c)),
        &quot;No booking&quot;,
        IF(
            Remaining_Tickets__c = 0,
            &quot;Cancelled&quot;,
            IF(
                Remaining_Tickets__c &gt;= 1,
                &quot;Booked&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
        <inlineHelpText>Automatically sets &quot;Booked&quot; if Remaining Tickets is 1 or greater // Automatically sets &quot;Cancelled&quot; if its 0. If there is no number, leaves field empty</inlineHelpText>
        <label>Booking Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_cancelled__c</fullName>
        <label>Booking cancelled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_date_time__c</fullName>
        <label>Booking date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bor_du_til_leje_eller_ejer_du__c</fullName>
        <label>Bor du til leje eller ejer du?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leje</fullName>
                </value>
                <value>
                    <fullName>Ejer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVR__c</fullName>
        <label>CVR</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendlyAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CalendlyAction</label>
        <referenceTo>Calendly__CalendlyAction__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendly_Answer_1__c</fullName>
        <label>Calendly Answer #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Answer_2__c</fullName>
        <label>Calendly Answer #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Answer_3__c</fullName>
        <label>Calendly Answer #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Booking_Note_Answer__c</fullName>
        <label>Calendly Booking Note Answer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendly_Booking_Note_Question__c</fullName>
        <label>Calendly Booking Note Question</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notér her, hvis kunde har nævnt noget specifikt, de gerne vil tale om.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendly_Booking_Picklist_Question__c</fullName>
        <inlineHelpText>This field is dynamically populated, based on the question the customer answered during booking. This field contains the question. The answer is show in the field &quot;Calendly Booking Picklist Selection&quot;</inlineHelpText>
        <label>Calendly Booking Picklist Question</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hvad er du interesseret i?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendly_Booking_Picklist__c</fullName>
        <inlineHelpText>This field will show whatever was picked in the picklist, during the booking of a Calendly Meeting. The field &quot;Calendly Booking Picklist Question&quot; will be dynamically populated with whatever the question was, for the given booking.</inlineHelpText>
        <label>Calendly Booking Picklist Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Testamente</fullName>
                </value>
                <value>
                    <fullName>Fremtidsfuldmagt</fullName>
                </value>
                <value>
                    <fullName>Begge dele</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendly_Event_ID__c</fullName>
        <label>Calendly Event ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Lecture_Booking_Time__c</fullName>
        <label>Calendly Lecture Booking Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly_Lecture_Meeting_Booked__c</fullName>
        <formula>NOT(ISBLANK(Calendly_Lecture_Meeting_Time__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendly Lecture Meeting Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendly_Lecture_Meeting_Time__c</fullName>
        <label>Calendly Lecture Meeting Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly_Meeting_Start__c</fullName>
        <formula>CalendlyAction__r.Calendly__EventStartTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendly Meeting Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly_Question_1__c</fullName>
        <label>Calendly Question #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Question_2__c</fullName>
        <label>Calendly Question #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Question_3__c</fullName>
        <label>Calendly Question #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__CalendlyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalendlyCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_After_Business_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call After Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Campaign_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the last CCS.</description>
        <label>Call Campaign State</label>
        <referenceTo>telegenta__Call_Campaign_State__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Campaign</label>
        <referenceTo>telegenta__Campaign__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Priority__c</fullName>
        <label>Call Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callable_Within_1_Hour__c</fullName>
        <formula>ISBLANK(telegenta__Lock_Time__c) || 
(telegenta__Lock_Time__c &lt;= NOW()) || 
(telegenta__Lock_Time__c - NOW() &lt;= (1/24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Callable Within 1 Hour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callable_Within_2_Hours__c</fullName>
        <formula>ISBLANK(telegenta__Lock_Time__c) || 
(telegenta__Lock_Time__c &lt;= NOW()) || 
(telegenta__Lock_Time__c - NOW() &lt;= (2/24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Callable Within 2 Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calls_Since_Last_Reopen__c</fullName>
        <label>Calls Since Last Reopen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Current_Start_Time__c</fullName>
        <label>Campaign Current Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Details__c</fullName>
        <formula>IF( ISPICKVAL( Publisher_Campaign__c , &quot;FoBruFo02122019Landingpage&quot;) ,&quot;Gratis børnetestamente - Medlemmer af Forbrugsforeningen betaler fuld pris hos DFJ men får 10% rabat af Forbrugforeningen, når de anvender deres betalingskort.&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;Forsikringshjælp11112019test1&quot;), &quot;Ingen kampagnerabat - Forsikringshjælps medarbejder har været i dialog med emnet&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;MM06122019gratisbtmkøb&quot;), &quot;Gratis børnetestamente - Kampagne igennem minmave.dk&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;Risikovurdering&quot;), &quot;Ingen kampagnerabat - Risikovurdering for alle besøgende på http://dinfamiliejurist.dk/risikovurdering/&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;DS06122019gratisFM&quot;), &quot;Gratis fremtidsfuldmagt + 10% på andre ydelser - Fra Danske seniorer https://dinfamiliejurist.dk/danskeseniorer/&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;nyhedsbreve200120gratisBT&quot;),&quot;Gratis børnetestamente - Kampagne via diverse nyhedsbreve&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;Bornibyen200120gratisBT&quot;),&quot;Gratis børnetestamente + 10% på andre ydelser - Kampagne igennem bornibyen.dk&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;reshopper200120gratisBT&quot;), &quot;Gratis børnetestamente - Kampagne igennem reshopper.dk&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;HK020220GratisBT&quot;), &quot;Gratis børnetestamente - Kampagne igennem fagforeningen HK&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;Samvirke020220GratisBT&quot;), &quot;Gratis børnetestamente - Kampagne igennem Samvirke&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;Folkeskolen020220GratisBT&quot;), &quot;Gratis børnetestamente - Kampagne igennem Folkeskolen.dk (folkeskolelærer)&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;FB120220gratisFT&quot;), &quot;Gratis fremtidsfuldmagt - Én pr. hustand - Kampagne igennem Facebook&quot;,
IF( ISPICKVAL( Publisher_Campaign__c , &quot;Fb31102019lauravideoBt1&quot;), &quot;Gratis børnetestamente - Kampagne igennem Facebook&quot;,
&quot;&quot;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Flow_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a Lead is created with this field being &quot;true&quot; or is updated to this field being &quot;true&quot;, it will trigger the campaign flow and create a matching campaign member, based on Related Event ID</description>
        <inlineHelpText>If a Lead is created with this field being &quot;true&quot; or is updated to this field being &quot;true&quot;, it will trigger the campaign flow and create a matching campaign member, based on Related Event ID</inlineHelpText>
        <label>Campaign Flow Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Previous_Start_Time__c</fullName>
        <label>Campaign Previous Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Can_be_Called__c</fullName>
        <formula>IF(Locked__c  = true, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can be Called</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Reschedule_LocationChange_Event__c</fullName>
        <label>Cancel/Reschedule/LocationChange Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_Time__c</fullName>
        <label>Cancellation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled_tickets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancelled tickets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_closed__c</fullName>
        <label>Case closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Log__c</fullName>
        <label>Change Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Children_over_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Er alle børn over 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Children_type__c</fullName>
        <label>Type børn</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fælles børn</fullName>
                </value>
                <value>
                    <fullName>Sammenbragte børn</fullName>
                </value>
                <value>
                    <fullName>Begge dele</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Civil_status__c</fullName>
        <label>Civilstatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Enlig</fullName>
                </value>
                <value>
                    <fullName>Samlevende</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Not_Converted_Status__c</fullName>
        <label>Closed Not Converted Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Lecture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Lecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aktieselskab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consider_testament__c</fullName>
        <label>Har overvejet et testamente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja, jeg har overvejet det</fullName>
                </value>
                <value>
                    <fullName>Nej, men jeg vil gerne have mere information</fullName>
                </value>
                <value>
                    <fullName>Ja, Jeg har allerede et testamente</fullName>
                </value>
                <value>
                    <fullName>Nej, men måske mangler jeg viden</fullName>
                </value>
                <value>
                    <fullName>;</fullName>
                </value>
                <value>
                    <fullName>Ja;Nej</fullName>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nej</fullName>
                </value>
                <value>
                    <fullName>Nej, ikke før nu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Message__c</fullName>
        <label>Content Message</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>1-3-lookalike-af-alle-leads</fullName>
                </value>
                <value>
                    <fullName>4-6-lookalike-af-alle-leads</fullName>
                </value>
                <value>
                    <fullName>Alle-med-boern-18-til-26</fullName>
                </value>
                <value>
                    <fullName>Alle-med-boern-som-er-i-forhold</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon 02122020</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122020</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122023</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122024</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122025</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122026</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122027</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122028</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122029</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122030</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122031</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122032</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122033</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122034</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122035</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122036</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122037</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122038</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122039</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122040</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122041</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122042</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122043</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122044</fullName>
                </value>
                <value>
                    <fullName>Arvetest over telefon, ved de bliver kontaktet 02122046</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Time__c</fullName>
        <formula>((ConvertedDate  -  DATEVALUE(CreatedDate)) * 24)*3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Time (In Seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Hour_Formatted__c</fullName>
        <formula>IF( Converted_Hour__c &gt;= 9,IF(
     LEN( TEXT(Converted_Hour__c) ) = 1, 
          &apos;0&apos; + TEXT(Converted_Hour__c)+ &apos;:00 - 0&apos; + TEXT(Converted_Hour__c)+ &apos;:59&apos;,
          TEXT(Converted_Hour__c)+ &apos;:00 - &apos; + TEXT(Converted_Hour__c)+ &apos;:59&apos;),NULL
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Hour Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Hour__c</fullName>
        <formula>IF(
    ISBLANK(Closed_Date__c),
	NULL,
      VALUE(TEXT(
     CASE(
          VALUE(RIGHT(LEFT(text(Closed_Date__c),FIND(&quot;:&quot;, TEXT( Closed_Date__c ))-1),2)), 
          00,19, 
          01,20, 
          02,21, 
          03,22, 
          04,23, 
          05,00, 
          06,01, 
          07,02, 
          08,03, 
          09,04, 
          10,05, 
          11,06, 
          12,07, 
          13,08, 
          14,09, 
          15,10, 
          16,11, 
          17,12, 
          18,13, 
          19,14, 
          20,15, 
          21,16, 
          22,17, 
          23,18, 
          00
      )
 )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Status__c</fullName>
        <label>Converted Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Converted promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>